<?xml version="1.0"?>
<package format="2">
    <name>lidar_object_detector</name>
    <version>0.0.0</version>
    <description>The lidar_object_detector package</description>
    <maintainer email="tanzby@outlook.com">iceytan</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>perception_msgs</depend>
    <depend>jsk_recognition_msgs</depend>
</package>
