<?xml version="1.0"?>
<package format="2">
    <name>perception_msgs</name>
    <version>0.0.1</version>
    <description>The perception_msgs package</description>

    <maintainer email="yulpun@qq.com">yulpun</maintainer>
    <maintainer email="tanzby@outlook.com">iceytan</maintainer>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>geometry_msgs</depend>
    <depend>jsk_recognition_msgs</depend>

</package>
