<?xml version="1.0"?>
<package format="2">
    <name>point_cloud_fusion</name>
    <version>0.0.0</version>
    <description>The point_cloud_fusion package</description>

    <maintainer email="tanzby@outlook.com">iceytan</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>message_filters</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
    <depend>pcl_ros</depend>
</package>
